--- a/hyprland.conf
+++ b/hyprland.conf
@@ -68,16 +68,17 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
-    border_size = 2
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
+    hover_icon_on_border=true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -87,8 +88,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-    rounding_power = 2
+    rounding = 0
+    rounding_power = 2.0 # Not applicable if 'rounding' is zero
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -164,8 +165,9 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    # force_default_wallpaper options are -1 (random), 0 (hypr logo), 1 (triangles), 2 (anime girl)
+    force_default_wallpaper = 0
+    disable_hyprland_logo = false # If true disables the hyprland wallpaper
 }
 
 
