Update hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,6 +35,7 @@ monitor=,preferred,auto,auto
 $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
+$browser = firefox
 
 
 #################
@@ -183,7 +184,12 @@ input {
     kb_options = caps:escape
     kb_rules =
 
-    follow_mouse = 1
+    # Specify if and how cursor movement should affect window focus. [0/1/2/3]
+    # 0 - Cursor movement will not change focus.
+    # 1 - Cursor movement will always change focus to the window under the cursor.
+    # 2 - Cursor focus will be detached from keyboard focus. Clicking on a window will move keyboard focus to that window.
+    # 3 - Cursor focus will be completely separate from keyboard focus. Clicking on a window will not change keyboard focus.
+    follow_mouse = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -221,6 +227,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, exec, $browser
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -273,8 +280,8 @@ bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # Custom audio controls for my 78-key keyboard
-bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
-bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
+bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
