Add some useful comments to hyprland.conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -82,8 +82,11 @@ general {
     hover_icon_on_border=true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    # Screen tearing is used to reduce latency and/or jitter in games.
     allow_tearing = false
 
+    # https://wiki.hyprland.org/Configuring/Dwindle-Layout/
+    # Dwindle is a BSPWM-like layout, where every window on a workspace is a member of a binary tree.
     layout = dwindle
 }
 
