Add pop sound when changing volume. Add aliases audio-hdmi and audio-blue to change audio sink via cmd line instead of GUI.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -282,9 +282,11 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
+# *** MY CUSTOM AUDIO CONTROLS ***
 # Custom audio controls for my 78-key keyboard
-bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+$pop = /usr/share/sounds/freedesktop/stereo/audio-volume-change.oga
+bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; paplay $pop
+bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; paplay $pop
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
