Add hypridle configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,6 +48,7 @@ $browser = firefox
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = hypridle
 
 
 #############################
@@ -284,9 +285,10 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # *** MY CUSTOM AUDIO CONTROLS ***
 # Custom audio controls for my 78-key keyboard
-$pop = /usr/share/sounds/freedesktop/stereo/audio-volume-change.oga
-bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; paplay $pop
-bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; paplay $pop
+$up = /usr/share/sounds/freedesktop/stereo/audio-volume-change.oga
+$down = /usr/share/sounds/freedesktop/stereo/message.oga
+bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; paplay $down
+bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; paplay $up
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
