--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -285,10 +285,11 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # *** MY CUSTOM AUDIO CONTROLS ***
 # Custom audio controls for my 78-key keyboard
-$up = /usr/share/sounds/freedesktop/stereo/audio-volume-change.oga
-$down = /usr/share/sounds/freedesktop/stereo/message.oga
-bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; paplay $down
-bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; paplay $up
+$up = ~/.config/hypr/tone440.wav
+$down = ~/.config/hypr/tone220.wav
+# Note: the --volume flag is there so that the tone sounds aren't so loud
+bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; paplay $up --volume 10000
+bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; paplay $down --volume 10000
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
