Update audio control tones

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -288,8 +288,8 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 $up = ~/.config/hypr/tone440.wav
 $down = ~/.config/hypr/tone220.wav
 # Note: the --volume flag is there so that the tone sounds aren't so loud
-bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; paplay $up --volume 10000
-bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; paplay $down --volume 10000
+bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; paplay $up
+bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; paplay $down
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
