Add swayOSD to config and archsetup script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,6 +50,10 @@ $browser = firefox
 # exec-once = waybar & hyprpaper & firefox
 exec-once = hypridle
 
+# SwayOSD (on-screen display)
+# https://github.com/ErikReider/SwayOSD
+exec-once = swayosd-server
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -284,12 +288,8 @@ bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # *** MY CUSTOM AUDIO CONTROLS ***
-# Custom audio controls for my 78-key keyboard
-$up = ~/.config/hypr/tone440.wav
-$down = ~/.config/hypr/tone220.wav
-# Note: the --volume flag is there so that the tone sounds aren't so loud
-bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; paplay $up
-bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; paplay $down
+bindel = , F5, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%; swayosd-client --output-volume lower
+bindel = , F6, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%; swayosd-client --output-volume raise
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
