--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $browser = firefox
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = hypridle
+exec-once = hypridle & hyprpaper
 
 # SwayOSD (on-screen display)
 # https://github.com/ErikReider/SwayOSD
